--- a/helm-charts/gateway/templates/deployment.yaml
+++ b/helm-charts/gateway/templates/deployment.yaml
@@ -25,15 +25,17 @@ spec:
         - name: SPRING_PROFILES_ACTIVE
           value: "prod,swagger"
         - name: EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE
-          value: "http://admin:admin@jhipster-registry-service.default.svc.cluster.local:8761/eureka"
+          value: "http://admin:{{ .Values.security.adminPassword }}@jhipster-registry-service.default.svc.cluster.local:8761/eureka"
         - name: SPRING_CLOUD_CONFIG_URI
-          value: "http://admin:admin@jhipster-registry-service.default.svc.cluster.local:8761/config"
+          value: "http://admin:{{ .Values.security.adminPassword }}@jhipster-registry-service.default.svc.cluster.local:8761/config"
         - name: SPRING_DATA_MONGODB_URI
           value: "mongodb://gateway-db-mongodb.default.svc.cluster.local:27017"
         - name: SPRING_DATA_MONGODB_DATABASE
           value: "gateway"
         - name: JHIPSTER_SLEEP
           value: "30"
+        - name: SPRING_DATA_ELASTICSEARCH_CLUSTER_NODES
+          value: "elastisearch-service.default.svc.cluster.local:9300"
         ports:
         - name: internalport
           containerPort: {{ .Values.service.internalPort }}
