--- a/helm-charts/gateway/values.yaml
+++ b/helm-charts/gateway/values.yaml
@@ -3,9 +3,11 @@
 # Declare variables to be passed into your templates.
 replicaCount: 1
 image:
-  repository: gcr.io/cryptocurrencyservices-197520/cryptocurrency-services-api-gateway
+#  repository: gcr.io/cryptocurrencyservices-197520/cryptocurrency-services-api-gateway
+  repository: minikube/cryptocurrency-services-api-gateway
   tag: 0.1.0
-  pullPolicy: Always
+#  pullPolicy: Always
+  pullPolicy: Never
 service:
   name: cryptocurrency-services-api-gateway
   type: NodePort
