Deployed into minikube and functioning.

--- a/helm-charts/gateway/values.yaml
+++ b/helm-charts/gateway/values.yaml
@@ -16,10 +16,10 @@ service:
 security:
     adminPassword: admin
 #resources:
-#  limits:
-#    cpu: 100m
-#    memory: 128Mi
+##  limits:
+##    cpu: 100m
+##    memory: 128Mi
 #  requests:
 #    cpu: 100m
-#    memory: 128Mi
+#    memory: 1024Mi
 
