--- a/src/test/resources/config/application.yml
+++ b/src/test/resources/config/application.yml
@@ -29,8 +29,12 @@ spring:
         type: simple
     data:
         mongodb:
-            host: localhost
-            port: 0
+#            host: localhost
+#            port: 0
+            host: minikube-easy
+            port: 30017
+#            host: gateway-db-mongodb.default.svc.cluster.local
+#            port: 27017
             database: CryptocurrencyServicesApiGateway
         elasticsearch:
             cluster-name:
