May have worked around jenkins build issues.

--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -39,7 +39,8 @@ spring:
         serialization.indent_output: true
     data:
         mongodb:
-            uri: mongodb://localhost:27017
+#            uri: mongodb://localhost:27017
+            uri: mongodb://gateway-db-mongodb.default.svc.cluster.local:27017
             database: CryptocurrencyServicesApiGateway
         elasticsearch:
             cluster-name:
