May have worked around jenkins build issues.

--- a/helm-charts/gateway/values.yaml
+++ b/helm-charts/gateway/values.yaml
@@ -5,7 +5,7 @@ replicaCount: 1
 image:
 #  repository: gcr.io/cryptocurrencyservices-197520/cryptocurrency-services-api-gateway
   repository: minikube/cryptocurrency-services-api-gateway
-  tag: 0.1.0
+  tag: 0.1.1aa
 #  pullPolicy: Always
   pullPolicy: Never
 service:
