--- a/pom.xml
+++ b/pom.xml
@@ -576,7 +576,7 @@
                 <configuration>
                     <!--<repository>gateway</repository>-->
                     <repository>${docker.repo}/cryptocurrency-services-api-gateway</repository>
-                    <tag>0.1.0</tag>
+                    <tag>0.1.1aa</tag>
                     <contextDirectory>${project.build.directory}</contextDirectory>
                 </configuration>
             </plugin>
