--- a/pom.xml
+++ b/pom.xml
@@ -651,7 +651,6 @@
                                         <artifactId>frontend-maven-plugin</artifactId>
                                         <versionRange>${frontend-maven-plugin.version}</versionRange>
                                         <goals>
-                                            <goal>install-node-and-npm</goal>
                                             <goal>install-node-and-yarn</goal>
                                             <goal>yarn</goal>
                                         </goals>
@@ -826,26 +825,26 @@
                                     <yarnVersion>${yarn.version}</yarnVersion>
                                 </configuration>
                             </execution>
-                            <execution>
-                                <id>yarn install</id>
-                                <goals>
-                                    <goal>yarn</goal>
-                                </goals>
-                                <configuration>
-                                    <arguments>install --force</arguments>
-                                </configuration>
-                            </execution>
-                            <execution>
-                                <id>webpack build test</id>
-                                <goals>
-                                    <goal>yarn</goal>
-                                </goals>
-                                <phase>test</phase>
-                                <configuration>
-                                    <arguments>run webpack:test</arguments>
-                                    <yarnInheritsProxyConfigFromMaven>false</yarnInheritsProxyConfigFromMaven>
-                                </configuration>
-                            </execution>
+                            <!--<execution>-->
+                                <!--<id>yarn install</id>-->
+                                <!--<goals>-->
+                                    <!--<goal>yarn</goal>-->
+                                <!--</goals>-->
+                                <!--<configuration>-->
+                                    <!--<arguments>install &#45;&#45;force</arguments>-->
+                                <!--</configuration>-->
+                            <!--</execution>-->
+                            <!--<execution>-->
+                                <!--<id>webpack build test</id>-->
+                                <!--<goals>-->
+                                    <!--<goal>yarn</goal>-->
+                                <!--</goals>-->
+                                <!--<phase>test</phase>-->
+                                <!--<configuration>-->
+                                    <!--<arguments>run webpack:test</arguments>-->
+                                    <!--<yarnInheritsProxyConfigFromMaven>false</yarnInheritsProxyConfigFromMaven>-->
+                                <!--</configuration>-->
+                            <!--</execution>-->
                             <execution>
                                 <id>webpack build prod</id>
                                 <goals>
