--- a/pom.xml
+++ b/pom.xml
@@ -825,26 +825,26 @@
                                     <yarnVersion>${yarn.version}</yarnVersion>
                                 </configuration>
                             </execution>
-                            <!--<execution>-->
-                                <!--<id>yarn install</id>-->
-                                <!--<goals>-->
-                                    <!--<goal>yarn</goal>-->
-                                <!--</goals>-->
-                                <!--<configuration>-->
-                                    <!--<arguments>install &#45;&#45;force</arguments>-->
-                                <!--</configuration>-->
-                            <!--</execution>-->
-                            <!--<execution>-->
-                                <!--<id>webpack build test</id>-->
-                                <!--<goals>-->
-                                    <!--<goal>yarn</goal>-->
-                                <!--</goals>-->
-                                <!--<phase>test</phase>-->
-                                <!--<configuration>-->
-                                    <!--<arguments>run webpack:test</arguments>-->
-                                    <!--<yarnInheritsProxyConfigFromMaven>false</yarnInheritsProxyConfigFromMaven>-->
-                                <!--</configuration>-->
-                            <!--</execution>-->
+                            <execution>
+                                <id>yarn install</id>
+                                <goals>
+                                    <goal>yarn</goal>
+                                </goals>
+                                <configuration>
+                                    <arguments>install --force</arguments>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>webpack build test</id>
+                                <goals>
+                                    <goal>yarn</goal>
+                                </goals>
+                                <phase>test</phase>
+                                <configuration>
+                                    <arguments>run webpack:test</arguments>
+                                    <yarnInheritsProxyConfigFromMaven>false</yarnInheritsProxyConfigFromMaven>
+                                </configuration>
+                            </execution>
                             <execution>
                                 <id>webpack build prod</id>
                                 <goals>
