--- a/pom.xml
+++ b/pom.xml
@@ -340,6 +340,13 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-spring-service-connector</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>de.flapdoodle.embed</groupId>
+            <artifactId>de.flapdoodle.embed.mongo</artifactId>
+            <scope>test</scope>
+        </dependency>
+
         <!-- Security -->
         <dependency>
             <groupId>org.springframework.security</groupId>
