--- a/scripts/jenkins/jenkins-secrets.yml
+++ b/scripts/jenkins/jenkins-secrets.yml
@@ -4,4 +4,4 @@ metadata:
   name: jenkins-secrets
 type: Opaque
 data:
-  mongo-prod-test-user-pass: X_MONGO_PROD_TEST_USER_PASS_X
+  mongo-prod-test-user-pass: "X_MONGO_PROD_TEST_USER_PASS_X"
