Testing push to github.

--- a/src/test/resources/config/application.yml
+++ b/src/test/resources/config/application.yml
@@ -35,15 +35,17 @@ spring:
 #            port: 30017
 #            host: gateway-db-mongodb.default.svc.cluster.local
 #            port: 27017
-            host: ${MONGO_PROD_TEST_USER_PASS}${MONGO_HOST_TEST}
+            host: ${MONGO_HOST_TEST}
 #            host: ds113122.mlab.com
             port: ${MONGO_PORT_TEST}
 #            port: 13122
             database: ${MONGO_DATABASE_TEST}
 #            database: cryptocurrency-services-prod-test
 #            database: CryptocurrencyServicesApiGateway
-            username: test-user
-            password: password123
+            username: ${MONGO_PROD_TEST_USER}
+#            username: test-user
+            password: ${MONGO_PROD_TEST_PASS}
+#            password: password123
         elasticsearch:
             cluster-name:
             cluster-nodes:
