Testing push to github.

--- a/scripts/jenkins/jenkins-pod-preset-master.yml
+++ b/scripts/jenkins/jenkins-pod-preset-master.yml
@@ -7,9 +7,14 @@ spec:
     matchExpressions:
       - {key: app, operator: In, values: [jenkins]}
   env:
-    - name: MONGO_PROD_TEST_USER_PASS
+    - name: MONGO_PROD_TEST_USER
       valueFrom:
         secretKeyRef:
           name: jenkins-secrets
-          key: mongo-prod-test-user-pass
+          key: mongo-prod-test-user
+    - name: MONGO_PROD_TEST_PASS
+      valueFrom:
+        secretKeyRef:
+          name: jenkins-secrets
+          key: mongo-prod-test-pass
 
