--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,8 @@
         <!-- jhipster-needle-maven-property -->
         <docker.repo>minikube</docker.repo>
 
+        <!--<mongodb.version>3.6.4</mongodb.version>-->
+
     </properties>
 
     <dependencyManagement>
@@ -88,6 +90,13 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+
+            <dependency>
+                <groupId>org.mongodb</groupId>
+                <artifactId>mongodb-driver</artifactId>
+                <version>3.6.4</version>
+            </dependency>
+
             <!-- jhipster-needle-maven-add-dependency-management -->
         </dependencies>
     </dependencyManagement>
