Testing push to github.

--- a/pom.xml
+++ b/pom.xml
@@ -93,8 +93,8 @@
 
             <dependency>
                 <groupId>org.mongodb</groupId>
-                <artifactId>mongodb-driver</artifactId>
-                <version>3.6.4</version>
+                <artifactId>mongo-java-driver</artifactId>
+                <version>3.8.0</version>
             </dependency>
 
             <!-- jhipster-needle-maven-add-dependency-management -->
