--- a/helm-charts/gateway/templates/deployment.yaml
+++ b/helm-charts/gateway/templates/deployment.yaml
@@ -29,7 +29,8 @@ spec:
         - name: SPRING_CLOUD_CONFIG_URI
           value: "http://admin:{{ .Values.security.adminPassword }}@jhipster-registry-service.default.svc.cluster.local:8761/config"
         - name: SPRING_DATA_MONGODB_URI
-          value: "mongodb://gateway-db-mongodb.default.svc.cluster.local:27017"
+#          value: "mongodb://gateway-db-mongodb.default.svc.cluster.local:27017"
+          value: "mongodb://admin:admin@gateway-db-mongodb.default.svc.cluster.local:27017"
         - name: SPRING_DATA_MONGODB_DATABASE
           value: "gateway"
         - name: JHIPSTER_SLEEP
