Attempting to use password for local mongo.

--- a/helm-charts/gateway/templates/deployment.yaml
+++ b/helm-charts/gateway/templates/deployment.yaml
@@ -30,6 +30,7 @@ spec:
           value: "http://admin:{{ .Values.security.adminPassword }}@jhipster-registry-service.default.svc.cluster.local:8761/config"
         - name: SPRING_DATA_MONGODB_URI
 #          value: "mongodb://gateway-db-mongodb.default.svc.cluster.local:27017"
+#          value: "mongodb://admin:admin@gateway-db-mongodb.default.svc.cluster.local:27017"
           value: "mongodb://admin:admin@gateway-db-mongodb.default.svc.cluster.local:27017"
         - name: SPRING_DATA_MONGODB_DATABASE
           value: "gateway"
