--- a/helm-charts/gateway/templates/deployment.yaml
+++ b/helm-charts/gateway/templates/deployment.yaml
@@ -31,6 +31,7 @@ spec:
         - name: SPRING_DATA_MONGODB_URI
 #          value: "mongodb://gateway-db-mongodb.default.svc.cluster.local:27017"
 #          value: "mongodb://admin:admin@gateway-db-mongodb.default.svc.cluster.local:27017"
+#          value: "mongodb://admin:admin@gateway-db-mongodb.default.svc.cluster.local:27017"
           value: "mongodb://admin:admin@gateway-db-mongodb.default.svc.cluster.local:27017"
         - name: SPRING_DATA_MONGODB_DATABASE
           value: "gateway"
