--- a/charts/cryptocurrency-services-api-gateway/Chart.yaml
+++ b/charts/cryptocurrency-services-api-gateway/Chart.yaml
@@ -1,5 +1,4 @@
 apiVersion: v1
 description: A Helm chart for Kubernetes
-icon: https://raw.githubusercontent.com/jenkins-x/jenkins-x-platform/master/images/java.png
 name: cryptocurrency-services-api-gateway
-version: 0.1.0-SNAPSHOT
+version: 0.1.0
