--- a/charts/cryptocurrency-services-api-gateway/templates/service.yaml
+++ b/charts/cryptocurrency-services-api-gateway/templates/service.yaml
@@ -1,23 +1,17 @@
 apiVersion: v1
 kind: Service
 metadata:
-{{- if .Values.service.name }}
-  name: {{ .Values.service.name }}
-{{- else }}
-  name: {{ template "fullname" . }}
-{{- end }}
+  name: {{ .Release.Name }}-service
   labels:
-    chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
-{{- if .Values.service.annotations }}
-  annotations:
-{{ toYaml .Values.service.annotations | indent 4 }}
-{{- end }}
+    chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
 spec:
   type: {{ .Values.service.type }}
+#  loadBalancerIP: 35.227.201.36
   ports:
   - port: {{ .Values.service.externalPort }}
     targetPort: {{ .Values.service.internalPort }}
     protocol: TCP
-    name: http
+    name: {{ .Values.service.name }}
   selector:
     app: {{ template "fullname" . }}
+#    tier: web
