Using skaffold to handle docker commands.

--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -30,3 +30,4 @@ profiles:
         setValueTemplates:
           image.repository: "{{.DOCKER_REGISTRY}}/kevinstl/cryptocurrency-services-api-gateway"
           image.tag: "{{.TAG}}"
+          image.pullPolicy: IfNotPresent
