Using skaffold to handle docker commands.

--- a/charts/cryptocurrency-services-api-gateway/values.yaml
+++ b/charts/cryptocurrency-services-api-gateway/values.yaml
@@ -7,7 +7,8 @@ image:
   repository: minikube/cryptocurrency-services-api-gateway
   tag: 0.1.1aa
 #  pullPolicy: Always
-  pullPolicy: Never
+#  pullPolicy: Never
+  pullPolicy: IfNotPresent
 service:
   name: cryptocurrency-services-api-gateway
   type: NodePort
