--- a/scripts/jenkins/jenkins-secrets.yml
+++ b/scripts/jenkins/jenkins-secrets.yml
@@ -6,3 +6,4 @@ type: Opaque
 data:
   mongo-prod-test-user: "X_MONGO_PROD_TEST_USER_X"
   mongo-prod-test-pass: "X_MONGO_PROD_TEST_PASS_X"
+  spring-data-mongodb-uri: "X_SPRING_DATA_MONGODB_URI_X"
