--- a/scripts/jenkins/jenkins-secrets.yml
+++ b/scripts/jenkins/jenkins-secrets.yml
@@ -6,4 +6,8 @@ type: Opaque
 data:
   mongo-prod-test-user: "X_MONGO_PROD_TEST_USER_X"
   mongo-prod-test-pass: "X_MONGO_PROD_TEST_PASS_X"
+  eureka-client-seivce-url-defaultzone: "X_EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE_X"
+  spring-cloud-config-uri: "X_SPRING_CLOUD_CONFIG_URI_X"
   spring-data-mongodb-uri: "X_SPRING_DATA_MONGODB_URI_X"
+
+
