Using skaffold to handle docker commands.

--- a/charts/cryptocurrency-services-api-gateway/templates/deployment.yaml
+++ b/charts/cryptocurrency-services-api-gateway/templates/deployment.yaml
@@ -53,7 +53,8 @@ spec:
               key: spring-data-mongodb-uri
 
         - name: SPRING_DATA_MONGODB_DATABASE
-          value: "gateway"
+#          value: "gateway"
+          value: "cryptocurrency-services-prod"
         - name: JHIPSTER_SLEEP
           value: "30"
         - name: SPRING_DATA_ELASTICSEARCH_CLUSTER_NODES
