--- a/charts/cryptocurrency-services-api-gateway/templates/deployment.yaml
+++ b/charts/cryptocurrency-services-api-gateway/templates/deployment.yaml
@@ -58,8 +58,10 @@ spec:
         - name: JHIPSTER_SLEEP
           value: "30"
         - name: SPRING_DATA_ELASTICSEARCH_CLUSTER_NODES
+        #This works for local:
 #          value: "elastisearch-service.default.svc.cluster.local:9300"
-          value: "elastisearch-service.jx-staging.svc.cluster.local:9300"
+#          value: "elastisearch-service.jx-staging.svc.cluster.local:9300"
+          value: "elastisearch-service:9300"
         ports:
         - name: internalport
           containerPort: {{ .Values.service.internalPort }}
