--- a/pom.xml
+++ b/pom.xml
@@ -379,6 +379,15 @@
             <scope>test</scope>
         </dependency>
         <!-- jhipster-needle-maven-add-dependency -->
+
+        <dependency>
+            <groupId>org.jacoco</groupId>
+            <artifactId>org.jacoco.agent</artifactId>
+            <classifier>runtime</classifier>
+            <scope>test</scope>
+            <version>${jacoco-maven-plugin.version}</version>
+        </dependency>
+
     </dependencies>
 
     <build>
