--- a/pom.xml
+++ b/pom.xml
@@ -620,10 +620,12 @@
             </plugin>
             <!-- jhipster-needle-maven-add-plugin -->
 
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-deploy-plugin</artifactId>
-        <version>2.8.2</version></plugin>
+      <!--<plugin>-->
+        <!--<groupId>org.apache.maven.plugins</groupId>-->
+        <!--<artifactId>maven-deploy-plugin</artifactId>-->
+        <!--<version>2.8.2</version>-->
+      <!--</plugin>-->
+
     </plugins>
         <pluginManagement>
             <plugins>
