--- a/pom.xml
+++ b/pom.xml
@@ -626,6 +626,11 @@
         <!--<version>2.8.2</version>-->
       <!--</plugin>-->
 
+    
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-deploy-plugin</artifactId>
+        <version>2.8.2</version></plugin>
     </plugins>
         <pluginManagement>
             <plugins>
