--- a/src/main/resources/config/bootstrap-prod.yml
+++ b/src/main/resources/config/bootstrap-prod.yml
@@ -10,7 +10,8 @@ spring:
                 initial-interval: 1000
                 max-interval: 2000
                 max-attempts: 100
-            uri: http://admin:${jhipster.registry.password}@localhost:8761/config
+#            uri: http://admin:${jhipster.registry.password}@localhost:8761/config
+            uri: http://admin:${jhipster.registry.password}@jhipster-registry-service.cryptocurrency-services.svc.cluster.local:8761/config
             # name of the config server's property source (file.yml) that we want to use
             name: CryptocurrencyServicesApiGateway
             profile: prod # profile(s) of the property source
