--- a/src/main/resources/config/bootstrap.yml
+++ b/src/main/resources/config/bootstrap.yml
@@ -18,7 +18,8 @@ spring:
     cloud:
         config:
             fail-fast: false # if not in "prod" profile, do not force to use Spring Cloud Config
-            uri: http://admin:${jhipster.registry.password}@localhost:8761/config
+#            uri: http://admin:${jhipster.registry.password}@localhost:8761/config
+            uri: http://admin:${jhipster.registry.password}@jhipster-registry-service.cryptocurrency-services.svc.cluster.local:8761/config
 #            uri: http://admin:${jhipster.registry.password}@${EUREKA_HOST}:${EUREKA_PORT}/config
             # name of the config server's property source (file.yml) that we want to use
             name: CryptocurrencyServicesApiGateway
