--- a/src/main/resources/config/application-prod.yml
+++ b/src/main/resources/config/application-prod.yml
@@ -25,7 +25,8 @@ eureka:
     client:
         service-url:
 #            defaultZone: http://admin:${jhipster.registry.password}@localhost:8761/eureka/
-            defaultZone: http://admin:${jhipster.registry.password}@jhipster-registry-service.cryptocurrency-services.svc.cluster.local:8761/eureka/
+#            defaultZone: http://admin:${jhipster.registry.password}@jhipster-registry-service.cryptocurrency-services.svc.cluster.local:8761/eureka/
+            defaultZone: http://admin:${jhipster.registry.password}@jhipster-registry-service.:8761/eureka/
 
 spring:
     devtools:
