--- a/src/main/resources/config/bootstrap-prod.yml
+++ b/src/main/resources/config/bootstrap-prod.yml
@@ -11,8 +11,9 @@ spring:
                 max-interval: 2000
                 max-attempts: 100
 #            uri: http://admin:${jhipster.registry.password}@localhost:8761/config
-            uri: http://admin:${jhipster.registry.password}@jhipster-registry-service.cryptocurrency-services.svc.cluster.local:8761/config
+#            uri: http://admin:${jhipster.registry.password}@jhipster-registry-service.cryptocurrency-services.svc.cluster.local:8761/config
             # name of the config server's property source (file.yml) that we want to use
+            uri: http://admin:${jhipster.registry.password}@jhipster-registry-service:8761/config
             name: CryptocurrencyServicesApiGateway
             profile: prod # profile(s) of the property source
             label: master # toggle to switch to a different version of the configuration as stored in git
