--- a/pom.xml
+++ b/pom.xml
@@ -567,30 +567,30 @@
                     -->
                 </configuration>
             </plugin>
-            <plugin>
-                <groupId>com.spotify</groupId>
-                <artifactId>dockerfile-maven-plugin</artifactId>
-                <version>${dockerfile-maven-plugin.version}</version>
+            <!--<plugin>-->
+                <!--<groupId>com.spotify</groupId>-->
+                <!--<artifactId>dockerfile-maven-plugin</artifactId>-->
+                <!--<version>${dockerfile-maven-plugin.version}</version>-->
 
-                <!--Uncomment the section below to build the docker image with mvn package and and push it with mvn deploy-->
+                <!--&lt;!&ndash;Uncomment the section below to build the docker image with mvn package and and push it with mvn deploy&ndash;&gt;-->
 
-                <!--<executions>-->
-                    <!--<execution>-->
-                    <!--<id>default</id>-->
-                    <!--<goals>-->
-                        <!--<goal>build</goal>-->
-                        <!--<goal>push</goal>-->
-                    <!--</goals>-->
-                    <!--</execution>-->
-                <!--</executions>-->
+                <!--&lt;!&ndash;<executions>&ndash;&gt;-->
+                    <!--&lt;!&ndash;<execution>&ndash;&gt;-->
+                    <!--&lt;!&ndash;<id>default</id>&ndash;&gt;-->
+                    <!--&lt;!&ndash;<goals>&ndash;&gt;-->
+                        <!--&lt;!&ndash;<goal>build</goal>&ndash;&gt;-->
+                        <!--&lt;!&ndash;<goal>push</goal>&ndash;&gt;-->
+                    <!--&lt;!&ndash;</goals>&ndash;&gt;-->
+                    <!--&lt;!&ndash;</execution>&ndash;&gt;-->
+                <!--&lt;!&ndash;</executions>&ndash;&gt;-->
 
-                <configuration>
-                    <!--<repository>gateway</repository>-->
-                    <repository>${docker.repo}/cryptocurrency-services-api-gateway</repository>
-                    <tag>0.1.1aa</tag>
-                    <contextDirectory>${project.build.directory}</contextDirectory>
-                </configuration>
-            </plugin>
+                <!--<configuration>-->
+                    <!--&lt;!&ndash;<repository>gateway</repository>&ndash;&gt;-->
+                    <!--<repository>${docker.repo}/cryptocurrency-services-api-gateway</repository>-->
+                    <!--<tag>0.1.1aa</tag>-->
+                    <!--<contextDirectory>${project.build.directory}</contextDirectory>-->
+                <!--</configuration>-->
+            <!--</plugin>-->
             <plugin>
                 <!--
                     Plugin that provides API-first development using swagger-codegen to
