Deploying into jx-local using jx commands.

--- a/charts/cryptocurrency-services-api-gateway/templates/deployment.yaml
+++ b/charts/cryptocurrency-services-api-gateway/templates/deployment.yaml
@@ -1,7 +1,8 @@
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: {{ .Release.Name }}-deployment
+#  name: {{ .Release.Name }}-deployment
+  name: {{ template "fullname" . }}
   labels:
    app: {{ template "fullname" . }}
    chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
