--- a/charts-from-jhipster-working-jx/cryptocurrency-services-api-gateway/templates/deployment.yaml
+++ b/charts-from-jhipster-working-jx/cryptocurrency-services-api-gateway/templates/deployment.yaml
@@ -1,75 +1,90 @@
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
+#  name: {{ .Release.Name }}-deployment
   name: {{ template "fullname" . }}
   labels:
-    draft: {{ default "draft-app" .Values.draft }}
-    chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
+   app: {{ template "fullname" . }}
+   chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
+   release: "{{ .Release.Name }}"
+   heritage: "{{ .Release.Service }}"
 spec:
   replicas: {{ .Values.replicaCount }}
   template:
     metadata:
       labels:
-        draft: {{ default "draft-app" .Values.draft }}
         app: {{ template "fullname" . }}
-{{- if .Values.podAnnotations }}
-      annotations:
-{{ toYaml .Values.podAnnotations | indent 8 }}
-{{- end }}
     spec:
+#      securityContext:
+#        runAsUser: 1001
+#        fsGroup: 1001
       containers:
       - name: {{ .Chart.Name }}
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
         imagePullPolicy: {{ .Values.image.pullPolicy }}
-
         env:
         - name: SPRING_PROFILES_ACTIVE
           value: "prod,swagger"
-
         - name: EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE
+        #This works for local:
+#          value: "http://admin:{{ .Values.security.adminPassword }}@jhipster-registry-service.default.svc.cluster.local:8761/eureka"
+
           valueFrom:
             secretKeyRef:
               name: jenkins-secrets
               key: eureka-client-service-url-defaultzone
 
         - name: SPRING_CLOUD_CONFIG_URI
+        #This works for local:
+#          value: "http://admin:{{ .Values.security.adminPassword }}@jhipster-registry-service.default.svc.cluster.local:8761/config"
+
           valueFrom:
             secretKeyRef:
               name: jenkins-secrets
               key: spring-cloud-config-uri
 
         - name: SPRING_DATA_MONGODB_URI
+#          value: "mongodb://gateway-db-mongodb.default.svc.cluster.local:27017"
+        #This works for local:
+#          value: "mongodb://admin:admin@gateway-db-mongodb.default.svc.cluster.local:27017"
+
           valueFrom:
             secretKeyRef:
               name: jenkins-secrets
               key: spring-data-mongodb-uri
 
         - name: SPRING_DATA_MONGODB_DATABASE
+#          value: "gateway"
+#          value: "cryptocurrency-services-prod"
           value: "{{ .Values.database }}"
+
 
         - name: JHIPSTER_SLEEP
           value: "30"
-
         - name: SPRING_DATA_ELASTICSEARCH_CLUSTER_NODES
+        #This works for local:
+#          value: "elastisearch-service.default.svc.cluster.local:9300"
+#          value: "elastisearch-service.jx-staging.svc.cluster.local:9300"
           value: "elastisearch-service:9300"
-
+#          value: "localhost:9300"
+#          value: "elastisearch-service.cryptocurrency-services.svc.cluster.local:9300"
         ports:
-        - containerPort: {{ .Values.service.internalPort }}
+        - name: internalport
+          containerPort: {{ .Values.service.internalPort }}
         livenessProbe:
           httpGet:
-            path: {{ .Values.probePath }}
+            path: /
             port: {{ .Values.service.internalPort }}
-          initialDelaySeconds: {{ .Values.livenessProbe.initialDelaySeconds }}
-          periodSeconds: {{ .Values.livenessProbe.periodSeconds }}
-          successThreshold: {{ .Values.livenessProbe.successThreshold }}
-          timeoutSeconds: {{ .Values.livenessProbe.timeoutSeconds }}
+          initialDelaySeconds: 180
+          periodSeconds: 5
+          timeoutSeconds: 5
+          failureThreshold: 10
         readinessProbe:
           httpGet:
-            path: {{ .Values.probePath }}
+            path: /
             port: {{ .Values.service.internalPort }}
-          periodSeconds: {{ .Values.readinessProbe.periodSeconds }}
-          successThreshold: {{ .Values.readinessProbe.successThreshold }}
-          timeoutSeconds: {{ .Values.readinessProbe.timeoutSeconds }}
+          initialDelaySeconds: 5
+          periodSeconds: 5
+          timeoutSeconds: 1
         resources:
 {{ toYaml .Values.resources | indent 12 }}
-      terminationGracePeriodSeconds: {{ .Values.terminationGracePeriodSeconds }}
