--- a/charts/cryptocurrency-services-api-gateway/values.yaml
+++ b/charts/cryptocurrency-services-api-gateway/values.yaml
@@ -1,27 +1,34 @@
-# Default values for mean-k8s.
+# Default values for Maven projects.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 replicaCount: 1
 image:
-#  repository: 10.104.167.184:5000/kevinstl/cryptocurrency-services-api-gateway
-  repository: 10.104.167.184:5000/kevinstl/cryptocurrency-services-api-gateway
-  tag: 0.0.17
-#  pullPolicy: Always
-#  pullPolicy: Never
+  repository: draft
+  tag: dev
   pullPolicy: IfNotPresent
 service:
   name: cryptocurrency-services-api-gateway
-  type: NodePort
-  externalPort: 8080
+  type: ClusterIP
+  externalPort: 80
   internalPort: 8080
-security:
-    adminPassword: admin
-database: cryptocurrency-services-prod
-#resources:
-##  limits:
-##    cpu: 100m
-##    memory: 128Mi
-#  requests:
-#    cpu: 100m
-#    memory: 1024Mi
-
+  annotations:
+    fabric8.io/expose: "true"
+    fabric8.io/ingress.annotations: "kubernetes.io/ingress.class: nginx"
+resources:
+  limits:
+    cpu: 500m
+    memory: 512Mi
+  requests:
+    cpu: 400m
+    memory: 512Mi
+probePath: /health
+livenessProbe:
+  initialDelaySeconds: 60
+  periodSeconds: 10
+  successThreshold: 1
+  timeoutSeconds: 1
+readinessProbe:
+  periodSeconds: 10
+  successThreshold: 1
+  timeoutSeconds: 1
+terminationGracePeriodSeconds: 10
