--- a/charts/cryptocurrency-services-api-gateway/values.yaml
+++ b/charts/cryptocurrency-services-api-gateway/values.yaml
@@ -3,7 +3,7 @@
 # Declare variables to be passed into your templates.
 replicaCount: 1
 image:
-  repository: draft
+  repository: 10.104.167.184:5000/kevinstl/cryptocurrency-services-api-gateway
   tag: dev
   pullPolicy: IfNotPresent
 service:
