Deploying into jx-local using jx commands.

--- a/charts/cryptocurrency-services-api-gateway/values.yaml
+++ b/charts/cryptocurrency-services-api-gateway/values.yaml
@@ -21,7 +21,8 @@ resources:
   requests:
     cpu: 400m
     memory: 512Mi
-probePath: /health
+#probePath: /health
+probePath: /
 livenessProbe:
   initialDelaySeconds: 180
   periodSeconds: 10
