Deploying into jx-local using jx commands.

--- a/charts/cryptocurrency-services-api-gateway/values.yaml
+++ b/charts/cryptocurrency-services-api-gateway/values.yaml
@@ -32,4 +32,5 @@ readinessProbe:
   periodSeconds: 10
   successThreshold: 1
   timeoutSeconds: 1
-terminationGracePeriodSeconds: 10
+#terminationGracePeriodSeconds: 10
+terminationGracePeriodSeconds: 180
