--- a/charts/cryptocurrency-services-api-gateway/values.yaml
+++ b/charts/cryptocurrency-services-api-gateway/values.yaml
@@ -24,7 +24,8 @@ resources:
 #probePath: /health
 probePath: /
 livenessProbe:
-  initialDelaySeconds: 60
+#  initialDelaySeconds: 60
+  initialDelaySeconds: 180
   periodSeconds: 10
   successThreshold: 1
   timeoutSeconds: 1
