Deploying into jx-local using jx commands.

--- a/charts/cryptocurrency-services-api-gateway/values.yaml
+++ b/charts/cryptocurrency-services-api-gateway/values.yaml
@@ -35,3 +35,4 @@ readinessProbe:
   timeoutSeconds: 1
 terminationGracePeriodSeconds: 10
 #terminationGracePeriodSeconds: 180
+database: cryptocurrency-services-prod
