--- a/charts/cryptocurrency-services-api-gateway/values.yaml
+++ b/charts/cryptocurrency-services-api-gateway/values.yaml
@@ -14,13 +14,13 @@ service:
   annotations:
     fabric8.io/expose: "true"
     fabric8.io/ingress.annotations: "kubernetes.io/ingress.class: nginx"
-resources:
-  limits:
-    cpu: 500m
-    memory: 512Mi
-  requests:
-    cpu: 400m
-    memory: 512Mi
+#resources:
+#  limits:
+#    cpu: 500m
+#    memory: 512Mi
+#  requests:
+#    cpu: 400m
+#    memory: 512Mi
 #probePath: /health
 probePath: /
 livenessProbe:
