--- a/charts/cryptocurrency-services-api-gateway/values.yaml
+++ b/charts/cryptocurrency-services-api-gateway/values.yaml
@@ -8,9 +8,11 @@ image:
   pullPolicy: IfNotPresent
 service:
   name: cryptocurrency-services-api-gateway
-  type: ClusterIP
+#  type: ClusterIP
+  type: NodePort
   externalPort: 8080
   internalPort: 8080
+  nodePort: 30080
   annotations:
     fabric8.io/expose: "true"
     fabric8.io/ingress.annotations: "kubernetes.io/ingress.class: nginx"
