Running unit tests in test database instance rather than prod database instance.

--- a/charts/cryptocurrency-services-api-gateway/values.yaml
+++ b/charts/cryptocurrency-services-api-gateway/values.yaml
@@ -8,8 +8,8 @@ image:
   pullPolicy: IfNotPresent
 service:
   name: cryptocurrency-services-api-gateway
-#  type: ClusterIP
-  type: NodePort
+  type: ClusterIP
+#  type: NodePort
   externalPort: 80
   internalPort: 8080
   nodePort: 30080
