Running unit tests in test database instance rather than prod database instance.

--- a/charts/cryptocurrency-services-api-gateway/templates/service.yaml
+++ b/charts/cryptocurrency-services-api-gateway/templates/service.yaml
@@ -17,7 +17,9 @@ spec:
   ports:
   - port: {{ .Values.service.externalPort }}
     targetPort: {{ .Values.service.internalPort }}
+{{- if .Values.service.nodePort }}
     nodePort: {{ .Values.service.nodePort }}
+{{- end }}
     protocol: TCP
     name: http
   selector:
