--- a/charts/cryptocurrency-services-api-gateway/values.yaml
+++ b/charts/cryptocurrency-services-api-gateway/values.yaml
@@ -12,7 +12,7 @@ service:
 #  type: NodePort
   externalPort: 80
   internalPort: 8080
-  nodePort: 30080
+#  nodePort: 30080
   annotations:
     fabric8.io/expose: "true"
     fabric8.io/ingress.annotations: "kubernetes.io/ingress.class: nginx"
