--- a/charts/cryptocurrency-services-api-gateway/values.yaml
+++ b/charts/cryptocurrency-services-api-gateway/values.yaml
@@ -9,7 +9,8 @@ image:
 service:
   name: cryptocurrency-services-api-gateway
 #  type: ClusterIP
-  type: NodePort
+#  type: NodePort
+  type: LoadBalancer
   externalPort: 80
   internalPort: 8080
 #  nodePort: 30080
