--- a/charts/cryptocurrency-services-api-gateway/templates/service.yaml
+++ b/charts/cryptocurrency-services-api-gateway/templates/service.yaml
@@ -4,7 +4,7 @@ metadata:
 {{- if .Values.service.name }}
   name: {{ .Values.service.name }}
 {{- else }}
-  name: {{ template "fullname" . }}
+  name: {{ template "fullname" . }}-service
 {{- end }}
   labels:
     chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
