--- a/charts/cryptocurrency-services-api-gateway/templates/service.yaml
+++ b/charts/cryptocurrency-services-api-gateway/templates/service.yaml
@@ -23,4 +23,4 @@ spec:
     protocol: TCP
     name: http
   selector:
-    app: {{ template "fullname" . }}
+    app: {{ template "fullname" . }}-ingress
