--- a/charts/cryptocurrency-services-api-gateway/templates/basic-ingress.yaml
+++ b/charts/cryptocurrency-services-api-gateway/templates/basic-ingress.yaml
@@ -7,7 +7,7 @@ metadata:
 #    kubernetes.io/ingress.global-static-ip-name: masternodes-online-supplement-ip
     kubernetes.io/ingress.global-static-ip-name: {{ template "fullname" . }}-static-ip
   labels:
-    app: {{ template "fullname" . }}-ingress
+    app: {{ template "fullname" . }}
 spec:
   backend:
     serviceName: {{ template "fullname" . }}-service
